# aiki110-oblig4

./: .gitignore  Hvordan del 2 av oppgaven ble løst.docx  README.txt  start_maott4996.sh
ros2/ros2/src/maott4996_bryter/: package.xml  setup.cfg  setup.py
ros2/ros2/src/maott4996_bryter/maott4996_bryter/: brytermonitor.py  brytertjeneste.py
ros2/ros2/src/maott4996_motor/: package.xml  setup.cfg  setup.py
ros2/ros2/src/maott4996_motor/maott4996_motor/: motornode.py
ros2/ros2/src/maott4996_sign/: CMakeLists.txt  package.xml
ros2/ros2/src/maott4996_sign/msg/: BryterTilstand.msg  MotorBevegelse.msg
ros2/ros2/src/maott4996_sign/srv/: Maott4996Brytertilstand.srv
ros2/ros2/src/maott4996_tilstand/: package.xml  setup.cfg  setup.py
ros2/ros2/src/maott4996_tilstand/maott4996_tilstand/: bevegelsenode.py  lysdiodenode.py
